import org.gradle.api.attributes.java.TargetJvmVersion

plugins {
    id 'java-library'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

def java25Launcher = javaToolchains.launcherFor {
    languageVersion = JavaLanguageVersion.of(25)
}

tasks.withType(JavaCompile).configureEach {
    options.release.set(25)
}

[
    configurations.compileClasspath,
    configurations.runtimeClasspath,
    configurations.testCompileClasspath,
    configurations.testRuntimeClasspath
].each { cfg ->
    cfg.attributes.attribute(TargetJvmVersion.TARGET_JVM_VERSION_ATTRIBUTE, 25)
}

tasks.withType(JavaExec).configureEach {
    javaLauncher = java25Launcher
}

repositories {
    mavenCentral()
}

dependencies {
    // LITIENGINE: the main dependency for game development
    implementation "de.gurkenlabs:litiengine:0.11.1"

    // LibGDX: expose this API to users because of core.level.elements.ILevel
    api supportDependencies.gdx
    api supportDependencies.gdx_platform
    api supportDependencies.gdx_backend_lwjgl3
    api supportDependencies.gdx_lwjgl3_glfw_awt_macos
    api supportDependencies.gdx_freetype
    api supportDependencies.gdx_freetype_platform
    api supportDependencies.gdx_backend_headless

    // Netty for server-client communication
    implementation supportDependencies.netty_all

    // JUnit and Mockito for testing
    testImplementation supportDependencies.junit
    testImplementation supportDependencies.junitLauncher
    testRuntimeOnly supportDependencies.junitLauncher
    testImplementation supportDependencies.mockito_core
    testImplementation "com.badlogicgames.gdx:gdx-backend-lwjgl:1.14.0"
    testImplementation("com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion")
    testImplementation("com.badlogicgames.gdx:gdx:$gdxVersion")
}


sourceSets.main.java.srcDirs = ['src/']
sourceSets.main.resources.srcDirs = ['assets/']

sourceSets.test.java.srcDirs = ['test/']
sourceSets.test.resources.srcDirs = ['test_assets/']

tasks.register('runBasicStarter', JavaExec) {
    group 'starter'
    mainClass = 'starter.BasicStarter'
    classpath = sourceSets.main.runtimeClasspath
    workingDir = projectDir
}

tasks.register('runMPServer', JavaExec) {
    group 'starter'
    mainClass = 'starter.MultiplayerServer'
    classpath = sourceSets.main.runtimeClasspath
}

tasks.register('runMPClient', JavaExec) {
    group 'starter'
    mainClass = 'starter.MultiplayerClient'
    classpath = sourceSets.main.runtimeClasspath
}

tasks.named('test', Test) {
    useJUnitPlatform()
    javaLauncher = java25Launcher
}
